Actualizacion de la pagina
Cambiando El nombre de plan de estudios
y agregando la pagina de titulacion y objetivos del programa educativo

--- a/objetivos.html
+++ b/objetivos.html
@@ -140,7 +140,7 @@
 <!--COLOCAR MAS ICONOS AQUI-->
 </div>
 </nav>
-</ul>	
+</ul> 
 </ul>
 </div>
 </header>  
@@ -149,39 +149,105 @@
 <br>
 <div class="container">
 <div class="main row">
-<br>
 <div class="col-lg-12 ">
-<h3 align="justify">HORARIOS DEL SEMESTRE 2018-I </h3>
-<br>
-<h4 align="justify"><strong>Primer Semestre</strong></h4>
-<table class="table table-bordered  table-responsive table-hover" align="center">
-<tr>
-<th>Clave</th>
-<th>Asignatura</th>
-<th>Profesor</th>
-<th>Grupo</th>
-<th>Lunes</th>
-<th>Martes</th>
-<th>Miercoles</th>
-<th>Jueves</th>
-<th>Viernes</th>
-<th>Salon</th>
-</tr>
-<!-- ASIGNATURAS Y CREDITOS TABLA DE PRIMER SEMESTRE-->
-<tr>
-<td>1928 </td>
-<td>Diseño asistido por computadora</td>
-<td>villegas juan carlos hernandez</td>
-<td>1923</td>
-<td>18:00 - 19:00</td>
-<td>---</td>
-<td>18:00 - 19:00</td>
-<td>---</td>
-<td>18:00 - 19:00</td>
-<td>1923</td>
-</tr>
 
+<table>
+	<tr> 
+	<th><h1>Objetivo General</h1></th>
+	</tr>
+	<tr> 
+	<td><p class="text-justify">Formar profesionales con fundamentos para planear, diseñar, construir, operar, desarrollar y evaluar proyectos de infraestructura de obra pública y privada, en las áreas de estructuras, construcción, geotecnia, sistemas y transportes, hidráulica y ambiental; con la finalidad de dar solución a las necesidades de creación, mejora, mantenimiento y rehabilitación de obras civiles desde un marco de diversidad de la Ingeniería, aplicando criterios de sustentabilidad con enfoque ético y responsable en el ejercicio de la profesión.</p></td>
+	</tr>
 </table>
+
+<table>
+	<tr> 
+	<th><h1 class="hidden-xs">Objetivos del Programa Educativo de Ingeniería Civil de la FES Aragón</h1>
+<h3 class="visible-xs">Objetivos del Programa Educativo de Ingeniería Civil de la FES Aragón</h3>
+
+	</th>
+	</tr>
+</table>
+
+
+<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingOne">
+      <h4 class="panel-title">
+        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          Objetivo educacional 1
+        </a>
+      </h4>
+    </div>
+    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+      <div class="panel-body">
+        Los egresados estarán insertos en empresas que se dedican al diseño de proyectos, colaborando en el sector constructivo de acuerdo con su área de especialización.
+      </div>
+    </div>
+  </div>
+
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingTwo">
+      <h4 class="panel-title">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+          Objetivo educacional 2
+        </a>
+      </h4>
+    </div>
+    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+      <div class="panel-body">
+ El egresado emplea herramientas informáticas, software y equipo especializado, para facilitar el desarrollo de proyectos civiles.
+      </div>
+    </div>
+  </div>
+
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingThree">
+      <h4 class="panel-title">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+         Objetivo educacional 3
+        </a>
+      </h4>
+    </div>
+    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+      <div class="panel-body">
+        El egresado mantiene contacto con organizaciones sociales, profesionales o de egresados que le permiten ser competitivo en el ejercicio de la profesión.
+      </div>
+    </div>
+  </div>
+
+<div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingFour">
+      <h4 class="panel-title">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
+         Objetivo educacional 4
+        </a>
+      </h4>
+    </div>
+    <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
+      <div class="panel-body">
+        Los egresados utilizan habilidades de comunicación para coordinar equipos multidisciplinarios y dar soluciones integrales a las necesidades de la sociedad.
+      </div>
+    </div>
+  </div>
+
+<div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingThree">
+      <h4 class="panel-title">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+         Objetivo educacional 5
+        </a>
+      </h4>
+    </div>
+    <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
+      <div class="panel-body">
+        Los egresados se incorporan en actividades de actualización disciplinar como: estudios de posgrado, especializaciones y diplomados para asimilar los cambios y avances de la profesión.
+      </div>
+    </div>
+  </div>
+</div>
+
+
 </div>
 </div>
 </div>
