--- a/titulacion.html
+++ b/titulacion.html
@@ -146,42 +146,33 @@
 </header>  
 <!-- TERMINA LA BARRA DE NAVEGACION -->
 
-<br>
-<div class="container">
-<div class="main row">
-<br>
-<div class="col-lg-12 ">
-<h3 align="justify">HORARIOS DEL SEMESTRE 2018-I </h3>
-<br>
-<h4 align="justify"><strong>Primer Semestre</strong></h4>
-<table class="table table-bordered  table-responsive table-hover" align="center">
-<tr>
-<th>Clave</th>
-<th>Asignatura</th>
-<th>Profesor</th>
-<th>Grupo</th>
-<th>Lunes</th>
-<th>Martes</th>
-<th>Miercoles</th>
-<th>Jueves</th>
-<th>Viernes</th>
-<th>Salon</th>
-</tr>
-<!-- ASIGNATURAS Y CREDITOS TABLA DE PRIMER SEMESTRE-->
-<tr>
-<td>1928 </td>
-<td>Diseño asistido por computadora</td>
-<td>villegas juan carlos hernandez</td>
-<td>1923</td>
-<td>18:00 - 19:00</td>
-<td>---</td>
-<td>18:00 - 19:00</td>
-<td>---</td>
-<td>18:00 - 19:00</td>
-<td>1923</td>
-</tr>
 
+<!-- AQUI COMIENZAN LOS CALENARIOS ESCOLARES-->
+<div class="container main  borde_derecha">
+<div class="row">
+<div class="col-lg-12">
+<h1>Titulación</h1>
+</div>
+<div align="center" class="col-lg-12">
+<table class="table-responsive">
+	<tr>
+	<th class="col-lg-4"> <a href="titulacion/Triptico_tramites_titulacion.pdf" target="_blank"> <img src="imagenes/tramites.png" class="img-responsive"> </a> </th>
+
+	<th class="col-lg-4"> <a href="titulacion/Triptico_Modalidades_Titulacion.pdf" target="_blank"> <img src="imagenes/modalidades.png" class="img-responsive"> </a> </th>
+	</tr>
+
+	<tr>
+		<td class="text-center hidden-xs"><strong><a href="titulacion/Triptico_tramites_titulacion.pdf" target="_blank"> Tramites de titulación Aqui </a> </strong></td>
+
+		<td class="text-center hidden-xs"><strong> <a href="titulacion/Triptico_Modalidades_Titulacion.pdf"> Modalidades de titulación Aqui</a></strong></td>
+
+				<td class="text-center visible-xs"><a href="titulacion/Triptico_tramites_titulacion.pdf" target="_blank"><h5><strong> Tramites </strong> </h5> </a> </td>
+
+		<td class="text-center visible-xs"><a href="titulacion/Triptico_Modalidades_Titulacion.pdf">
+		<h5><strong> Modalidades</strong></h5> </a></td>
+	</tr>
 </table>
+<br>
 </div>
 </div>
 </div>
