--- a/perfiles.html
+++ b/perfiles.html
@@ -78,8 +78,9 @@
 <!--TITULO 3 DESPLEGABLE-->
 <ul class="nav navbar-nav navbar ">
 <li class="dropdown letra">
-<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><strong style="color:#293e6b;">Plan de estudios</strong><span class="caret"></span></a>
+<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><strong style="color:#293e6b;">Programa Educativo</strong><span class="caret"></span></a>
 <ul class="dropdown-menu">
+<li><a href="objetivos.html">Objetivos del Programa Educativo </a></li>
 <li><a href="perfiles.html">Perfiles</a></li>
 <li><a href="plan_estudios_actual.html">Mapa curricular</a></li>
 <li role="separator" class="divider"></li>
@@ -93,9 +94,12 @@
 <li class="dropdown letra">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><strong style="color:#293e6b;">Egresados</strong><span class="caret"></span></a>
 <ul class="dropdown-menu">
+<li> <a href="titulacion.html">Titulación </a> </li>
+<li role="separator" class="divider"></li>
 <li><a href="http://educacioncontinua.cuaed.unam.mx/oferta.php" target="_blank">Educacion continua</a></li>
 <li><a href="http://www.aragon.unam.mx/aragon/eventos/2017/pdmi_unam/" target="_blank">Oferta Educativa</a></li>
 <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSf7xjTvk_9mWU5uo_cunAlbIIOtESCtnxjxqs3NGf97La9cCQ/viewform?fbzx=2033124194252804600" target="_blank">Cuestionario a Egresados</a></li>
+
 </ul>
 </li>
 </ul>
@@ -141,7 +145,6 @@
 </div>
 </header>  
 <!-- TERMINA LA BARRA DE NAVEGACION -->
-
 
 <!-- AQUI COMIENZAN LOS PERFILES DE UN INGENIERO CIVIL-->
 <div class="container">
