Actualizar el aviso
Aviso a alumnos de primer semestre

--- a/index.html
+++ b/index.html
@@ -404,19 +404,19 @@ El gran número de empresas interesadas, la complejidad en la evaluación del pr
 <!--TITULO DE ATENCION (Moviles)-->
 <h1 class="display-3 visible-xs text-center">Atención!</h1>
 <!--PRINCIPAL ANUNCIO (ESCRITORIO)-->
-<h5 class="lead hidden-xs">Convocatoria Cambio de Turno Semestre 2018-I</h5>
+<h5 class="lead hidden-xs">Aviso Alumno de Primer Ingreso 2018-I</h5>
 <!--PRINCIPAL ANUNCIO (MOVILES)-->
-<h5 class="lead visible-xs text-center">Convocatoria Cambio de Turno Semestre 2018-I</h5>
+<h5 class="lead visible-xs text-center">Aviso Alumno de Primer Ingreso 2018-I</h5>
 <hr class="my-1">
 <!--ANUNCIO (ESCRITORIO)-->
-<p class="hidden-xs text-justify">Servicios Escolares publica la convocatoria  de cambio de turno para sistema escolarizado en el semestre 2018-I, consulta las bases. Tienes hasta 19 de junio para el registro.</p>
+<p class="hidden-xs text-justify">Alumnos que han sido aceptados en la FES Aragón en el ciclo 2018-I, descargar y llenar la carta compromiso</p>
 <!--ANUNCIO (MOVILES)-->
-<h6 class="visible-xs text-justify">Servicios Escolares publica la convocatoria  de cambio de turno para sistema escolarizado en el semestre 2018-I, consulta las bases. Tienes hasta 19 de junio para el registro.</h6>
+<h6 class="visible-xs text-justify">Alumnos que han sido aceptados en la FES Aragón en el ciclo 2018-I, descargar y llenar la carta compromiso</h6>
 <!--BOTON DE LEER MAS (ESCRITORIO)-->
 <p class="lead">
-<a class="btn btn-primary btn-lg hidden-xs" href="http://www.aragon.unam.mx/unam/eventos//pdf_2017/convocatoria-cambio_turno_20172.pdf" target="_blank">Leer mas</a>
+<a class="btn btn-primary btn-lg hidden-xs" href="http://www.aragon.unam.mx/unam/eventos/primer_ingreso_20181/CARTA_COMPROMISO_2018-I.doc" target="_blank">Leer mas</a>
 <!--BOTON DE LEER MAS (MOVILES)-->
-<h6> <a class="btn btn-primary btn-lg visible-xs" href="http://www.aragon.unam.mx/unam/eventos//pdf_2017/convocatoria-cambio_turno_20172.pdf" target="_blank">Leer mas</a> </h6>
+<h6> <a class="btn btn-primary btn-lg visible-xs" href="http://www.aragon.unam.mx/unam/eventos/primer_ingreso_20181/CARTA_COMPROMISO_2018-I.doc" target="_blank">Leer mas</a> </h6>
 </p>
 </div>
 </div>
