Actualizando Perfiles y Calendarios
Cambio el calendario 2017 a 2018 y actualizo los perfiles de los ingenieros civiles

--- a/calendario.html
+++ b/calendario.html
@@ -82,7 +82,7 @@
 <ul class="dropdown-menu">
 <li><a href="objetivos.html">Objetivos del Programa Educativo </a></li>
 <li><a href="perfiles.html">Perfiles</a></li>
-<li><a href="plan_estudios_actual.html">Mapa curricular</a></li>
+<li><a href="plan_estudios_actual.html">Plan de Estudios</a></li>
 <li role="separator" class="divider"></li>
 <li><a href="http://laboratorio-l-4.blogspot.mx/" target="_blank">Laboratorios</a></li>
 </ul>
@@ -159,25 +159,31 @@ Calendarios Escolares
 <h3 class="visible-xs">
 Calendarios Escolares
 </h3>
-<!-- IMAGEN DEL CALENDARIO ANUAL-->
-<div class="col-lg-4 col-lg-offset-1 col-md-4 col-md-offset-1 col-sm-4 col-sm-offset-1 col-xs-9 col-xs-offset-1">
-<a href="https://escolar1.unam.mx/pdfs/CalendarioAnual2017_gaceta.pdf" target="_blank"><img src="imagenes/anual.png" class="img-responsive"></a>
-</div>
-<!-- IMAGEN DEL CALENDARIO SEMESTRAL-->
-<div class="col-lg-4 col-lg-offset-2 col-md-4 col-md-offset-2 col-sm-4 col-sm-offset-2 col-xs-9 col-xs-offset-1">
-<a href="https://escolar1.unam.mx/pdfs/CalendarioSemestral2017_gaceta.pdf"target="_blank"><img src="imagenes/semestral.png" class="img-responsive"></a>
+
+<div align="center" class="col-lg-12">
+<table class="table-responsive">
+
+<tr>
+<th class="col-lg-4"><a href="https://escolar1.unam.mx/pdfs/CalendarioAnual2018.pdf " target="_blank"><img src="imagenes/anual.jpg" class="img-responsive"></a> 
+</th>
+
+<th class="col-lg-4"><a href="https://escolar1.unam.mx/pdfs/CalendarioSemestral2018.pdf" target="_blank"><img src="imagenes/semestral.jpg" class="img-responsive"></a>
+</th>
+</tr>
+
+<tr>
+<td class="text-center hidden-xs"><strong><a href="https://escolar1.unam.mx/pdfs/CalendarioAnual2018.pdf" target="_blank"> Calendario Escolar Plan Anual 2018 </a> </strong></td>
+
+<td class="text-center hidden-xs"><strong> <a href="https://escolar1.unam.mx/pdfs/CalendarioSemestral2018.pdf"> Calendario Escolar Plan Semestral 2018</a></strong></td>
+</tr>
+
+</table>
 <br>
 </div>
-<!-- TITULO DEL CALENDARIO DE LA FES PARA ESCRITORIO-->
-<div class="col-lg-12">
-<h3 class="hidden-xs">
-Calendario Fes Aragon </h3>
-<!-- TITULO DEL CALENDARIO DE LA FES PARA MOVILES-->
-<h4 class="visible-xs col-xs-12">
-Calendario Fes Aragon </h4>
 
 <!-- TABLA DE CALENDARIO ESCOLAR DE LA FES ARAGON-->
 <br>
+<h3 align="justify" class="col-xs-12"><strong>Calendario de la FES Aragón</strong></h3>
 <h4 align="justify" class="col-xs-12"><strong>semestre 2017-2</strong></h4>
 <table class="table table-bordered  table-responsive table-hover " align="center">
 <tr>
@@ -241,7 +247,6 @@ Calendario Fes Aragon </h4>
 </tr>
 <!-- AGREGAR MAS ACTVIDADES AQUI-->
 </table>
-</div>
 </div>
 </div>
 </div>
