--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <ul class="dropdown-menu">
 <li><a href="objetivos.html">Objetivos del Programa Educativo </a></li>
 <li><a href="perfiles.html">Perfiles</a></li>
-<li><a href="plan_estudios_actual.html">Mapa curricular</a></li>
+<li><a href="plan_estudios_actual.html">Plan de Estudios</a></li>
 <li role="separator" class="divider"></li>
 <li><a href="http://laboratorio-l-4.blogspot.mx/" target="_blank">Laboratorios</a></li>
 </ul>
@@ -263,7 +263,7 @@ El gran número de empresas interesadas, la complejidad en la evaluación del pr
 <div class=" text-center borde_derecha main col-xs-6 col-sm-6 col-md-6 col-lg-4 ">
 <br>
 <div class="thumbnail">
-<a href="http://www.aragon.unam.mx/aragon/escolares-proceso-titulacion.html" target="_blank"><img src="imagenes/titulacion.png" alt="">
+<a href="http://www.aragon.unam.mx/aragon/proceso-de-titulacion.html" target="_blank"><img src="imagenes/titulacion.png" alt="">
 <div class="caption ">
 <div class="visible-xs visible-sm visible-md">
 <span class="label label-success bar"> Titulacion </span>
