--- a/plan_estudios_actual.html
+++ b/plan_estudios_actual.html
@@ -82,7 +82,7 @@
 <ul class="dropdown-menu">
 <li><a href="objetivos.html">Objetivos del Programa Educativo </a></li>
 <li><a href="perfiles.html">Perfiles</a></li>
-<li><a href="plan_estudios_actual.html">Mapa curricular</a></li>
+<li><a href="plan_estudios_actual.html">Plan de Estudios</a></li>
 <li role="separator" class="divider"></li>
 <li><a href="http://laboratorio-l-4.blogspot.mx/" target="_blank">Laboratorios</a></li>
 </ul>
