--- a/index.html
+++ b/index.html
@@ -397,23 +397,23 @@ El gran número de empresas interesadas, la complejidad en la evaluación del pr
 <div class="col borde_derecha foo ">
 <div class="jumbotron ">
 <!--TITULO DE ATENCION (ESCRITORIO)-->
-<h1 class="display-3 hidden-xs">Atención!</h1>
+<h1 class="display-3 hidden-xs">Bienvenida Generación 2018</h1>
 <!--TITULO DE ATENCION (Moviles)-->
-<h1 class="display-3 visible-xs text-center">Atención!</h1>
+<h1 class="display-3 visible-xs text-center">Bienvenida Generación 2018</h1>
 <!--PRINCIPAL ANUNCIO (ESCRITORIO)-->
-<h5 class="lead hidden-xs">Aviso Alumno de Primer Ingreso 2018-I</h5>
+<h5 class="lead hidden-xs">Consulta el micrositio</h5>
 <!--PRINCIPAL ANUNCIO (MOVILES)-->
-<h5 class="lead visible-xs text-center">Aviso Alumno de Primer Ingreso 2018-I</h5>
+<h5 class="lead visible-xs text-center">Consulta el micrositio</h5>
 <hr class="my-1">
 <!--ANUNCIO (ESCRITORIO)-->
-<p class="hidden-xs text-justify">Alumnos que han sido aceptados en la FES Aragón en el ciclo 2018-I, descargar y llenar la carta compromiso</p>
+<p class="hidden-xs text-justify"></p>
 <!--ANUNCIO (MOVILES)-->
-<h6 class="visible-xs text-justify">Alumnos que han sido aceptados en la FES Aragón en el ciclo 2018-I, descargar y llenar la carta compromiso</h6>
+<h6 class="visible-xs text-justify"></h6>
 <!--BOTON DE LEER MAS (ESCRITORIO)-->
 <p class="lead">
-<a class="btn btn-primary btn-lg hidden-xs" href="http://www.aragon.unam.mx/unam/eventos/primer_ingreso_20181/CARTA_COMPROMISO_2018-I.doc" target="_blank">Leer mas</a>
+<a class="btn btn-primary btn-lg hidden-xs" href="http://www.aragon.unam.mx/bienvenidaFESAragon20181/" target="_blank">Leer mas</a>
 <!--BOTON DE LEER MAS (MOVILES)-->
-<h6> <a class="btn btn-primary btn-lg visible-xs" href="http://www.aragon.unam.mx/unam/eventos/primer_ingreso_20181/CARTA_COMPROMISO_2018-I.doc" target="_blank">Leer mas</a> </h6>
+<h6> <a class="btn btn-primary btn-lg visible-xs" href="http://www.aragon.unam.mx/bienvenidaFESAragon20181/" target="_blank">Leer mas</a> </h6>
 </p>
 </div>
 </div>
