Agregando atributos de egreso
ultimas modificaciones antes de subir la pagina a internet.

--- a/atributos.html
+++ b/atributos.html
@@ -40,7 +40,7 @@
 
 <!--BOTON DESPLEGABLE PARA MOVILES-->
 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-    <span class="sr-only">Toggle navigation</span>
+		<span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -82,12 +82,12 @@
 <li class="dropdown">
  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="letraazul"> <strong> Programa Educativo </strong> </span><span class="caret"></span></a>
           <ul class="dropdown-menu">
-      <li><a href="objetivos.html">Objetivos del Programa Educativo </a></li>
-      <li><a href="perfiles.html">Perfiles</a></li>
-      <li><a href="plan_estudios_actual.html">Plan de Estudios</a></li>
-      <li><a href="atributos.html">Atributos de egreso</a></li>
-      <li role="separator" class="divider"></li>
-      <li><a href="http://laboratorio-l-4.blogspot.mx/" target="_blank">Laboratorios</a></li>
+			<li><a href="objetivos.html">Objetivos del Programa Educativo </a></li>
+			<li><a href="perfiles.html">Perfiles</a></li>
+			<li><a href="plan_estudios_actual.html">Plan de Estudios</a></li>
+			<li><a href="atributos.html">Atributos de egreso</a></li>
+			<li role="separator" class="divider"></li>
+			<li><a href="http://laboratorio-l-4.blogspot.mx/" target="_blank">Laboratorios</a></li>
           </ul>
         </li>
         </ul>
@@ -97,11 +97,11 @@
 <li class="dropdown">
  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="letraazul"> <strong> Egresados </strong> </span><span class="caret"></span></a>
           <ul class="dropdown-menu">
-      <li> <a href="titulacion.html">Titulación </a> </li>
-      <li role="separator" class="divider"></li>
-      <li><a href="http://educacioncontinua.cuaed.unam.mx/oferta.php" target="_blank">Educacion continua</a></li>
-      <li><a href="http://www.aragon.unam.mx/aragon/eventos/2017/pdmi_unam/" target="_blank">Oferta Educativa</a></li>
-      <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSf7xjTvk_9mWU5uo_cunAlbIIOtESCtnxjxqs3NGf97La9cCQ/viewform?fbzx=2033124194252804600" target="_blank">Cuestionario a Egresados</a></li>
+			<li> <a href="titulacion.html">Titulación </a> </li>
+			<li role="separator" class="divider"></li>
+			<li><a href="http://educacioncontinua.cuaed.unam.mx/oferta.php" target="_blank">Educacion continua</a></li>
+			<li><a href="http://www.aragon.unam.mx/aragon/eventos/2017/pdmi_unam/" target="_blank">Oferta Educativa</a></li>
+			<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSf7xjTvk_9mWU5uo_cunAlbIIOtESCtnxjxqs3NGf97La9cCQ/viewform?fbzx=2033124194252804600" target="_blank">Cuestionario a Egresados</a></li>
           </ul>
         </li>
         </ul>
@@ -111,9 +111,9 @@
 <li class="dropdown">
  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="letraazul"> <strong> Partes Interesadas </strong> </span><span class="caret"></span></a>
           <ul class="dropdown-menu">
-      <li><a href="#">CACEI </a></li>
-      <li><a href="#">CACEI </a></li>
-      <li><a href="#">CACEI </a></li>
+			<li><a href="#">CACEI </a></li>
+			<li><a href="#">CACEI </a></li>
+			<li><a href="#">CACEI </a></li>
           </ul>
         </li>
         </ul>
@@ -143,112 +143,58 @@
 </nav>
 <!--TERMINA EL MENU DE NAVEGACIÓN-->
 
-<br>
+<!--AQUI EMPIEZAN LOS ATRIBUTOS DE EGRESO-->
 <div class="container">
-<div class="main row">
-<div class="col-lg-12 ">
+<div class="row">
+<div class="col-lg-12 main borde_derecha">	
+<h2> Atributos de egreso </h2>
 
-<table>
-	<tr> 
-	<th><h1>Objetivo General</h1></th>
+<table class="table table-hover table-responsive">
+	<tr>
+	<td class="text-right active"><strong>1.- </strong></td>
+	<td class="active"> Identificar, formular y resolver problemas de ingeniería aplicando los principios de ingeniería, ciencias y matemáticas.</td>
 	</tr>
-	<tr> 
-	<td><p class="text-justify">Formar profesionales con fundamentos para planear, diseñar, construir, operar, desarrollar y evaluar proyectos de infraestructura de obra pública y privada, en las áreas de estructuras, construcción, geotecnia, sistemas y transportes, hidráulica y ambiental; con la finalidad de dar solución a las necesidades de creación, mejora, mantenimiento y rehabilitación de obras civiles desde un marco de diversidad de la Ingeniería, aplicando criterios de sustentabilidad con enfoque ético y responsable en el ejercicio de la profesión.</p></td>
+
+	<tr>
+	<td class=" text-right"><strong>2.- </strong></td>
+	<td>Aplicar, analizar y sintetizar procesos de diseño de ingeniería que resulten en proyectos que cumplen las necesidades especificadas.</td>
 	</tr>
+
+	<tr>
+	<td class=" text-right active"><strong>3.- </strong></td>
+	<td class="active">Desarrollar y conducir experimentación adecuada; analizar e interpretar datos y utilizar el juicio ingenieril para establecer conclusiones.</td>
+	</tr>
+
+	<tr>
+	<td class=" text-right"><strong>4.- </strong></td>
+	<td>Comunicarse efectivamente con diferentes audiencias.</td>
+	</tr>
+
+	<tr>
+	<td class=" text-right active"><strong>5.- </strong></td>
+	<td class="active">Reconocer sus responsabilidades éticas y profesionales en situaciones relevantes para la ingeniería y realizar juicios informados que deben considerar el impacto de las soluciones de ingeniería en los contextos global, económico, ambiental y social.</td>
+	</tr>
+
+	<tr>
+	<td class="text-right"><strong>6.- </strong></td>
+	<td>Reconocer la necesidad permanente de conocimiento adicional y tener la habilidad para localizar, evaluar, integrar y aplicar este conocimiento adecuadamente.</td>
+	</tr>
+
+	<tr>
+	<td class=" text-right active"><strong>7.- </strong></td>
+	<td class="active">Trabajar efectivamente en equipos que establecen metas, planean tareas, cumplen fechas límite y analizan riesgos e incertidumbre.</td>
+	</tr>
+
 </table>
-
-<table>
-	<tr> 
-	<th><h1 class="hidden-xs">Objetivos del Programa Educativo de Ingeniería Civil de la FES Aragón</h1>
-<h3 class="visible-xs">Objetivos del Programa Educativo de Ingeniería Civil de la FES Aragón</h3>
-
-	</th>
-	</tr>
-</table>
-
-
-<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-  <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingOne">
-      <h4 class="panel-title">
-        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          Objetivo educacional 1
-        </a>
-      </h4>
-    </div>
-    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-      <div class="panel-body">
-        Los egresados estarán insertos en empresas que se dedican al diseño de proyectos, colaborando en el sector constructivo de acuerdo con su área de especialización.
-      </div>
-    </div>
-  </div>
-
-  <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingTwo">
-      <h4 class="panel-title">
-        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          Objetivo educacional 2
-        </a>
-      </h4>
-    </div>
-    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-      <div class="panel-body">
- El egresado emplea herramientas informáticas, software y equipo especializado, para facilitar el desarrollo de proyectos civiles.
-      </div>
-    </div>
-  </div>
-
-  <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingThree">
-      <h4 class="panel-title">
-        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-         Objetivo educacional 3
-        </a>
-      </h4>
-    </div>
-    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-      <div class="panel-body">
-        El egresado mantiene contacto con organizaciones sociales, profesionales o de egresados que le permiten ser competitivo en el ejercicio de la profesión.
-      </div>
-    </div>
-  </div>
-
-<div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingFour">
-      <h4 class="panel-title">
-        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
-         Objetivo educacional 4
-        </a>
-      </h4>
-    </div>
-    <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
-      <div class="panel-body">
-        Los egresados utilizan habilidades de comunicación para coordinar equipos multidisciplinarios y dar soluciones integrales a las necesidades de la sociedad.
-      </div>
-    </div>
-  </div>
-
-<div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingThree">
-      <h4 class="panel-title">
-        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-         Objetivo educacional 5
-        </a>
-      </h4>
-    </div>
-    <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
-      <div class="panel-body">
-        Los egresados se incorporan en actividades de actualización disciplinar como: estudios de posgrado, especializaciones y diplomados para asimilar los cambios y avances de la profesión.
-      </div>
-    </div>
-  </div>
 </div>
+</div>	
+</div>
+<br><br>
+<!--TERMINAN LOS ATRIBUTOS DE EGRESO-->
 
 
-</div>
-</div>
-</div>
-<br>
+
+
 
 <!--AQUI EMPIEZA EL DIRECTOIO DE LA FES-->
 <footer>
