--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 			<li><a href="objetivos.html">Objetivos del Programa Educativo </a></li>
 			<li><a href="perfiles.html">Perfiles</a></li>
 			<li><a href="plan_estudios_actual.html">Plan de Estudios</a></li>
+			<li><a href="atributos.html">Atributos de egreso</a></li>
 			<li role="separator" class="divider"></li>
 			<li><a href="http://laboratorio-l-4.blogspot.mx/" target="_blank">Laboratorios</a></li>
           </ul>
